[package]
name = "fungi_rs"
version = "0.1.0"
authors = ["sketchpunk"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
js-sys = "0.3.20"
console_error_panic_hook = "0.1.6"


[dependencies.web-sys]
version = "0.3.4"
features = [
	"console",
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",

	"HtmlCanvasElement",
	"WebGlBuffer",
	"WebGl2RenderingContext",
	"WebGlProgram",
	"WebGlShader",
	"WebGlUniformLocation",
	"WebGlVertexArrayObject",
]
